--- a/IMC/IMC/app/src/main/AndroidManifest.xml
+++ b/IMC/IMC/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.IMC"
         tools:targetApi="31">
         <activity
+            android:name=".IMCResultado"
+            android:exported="false"
+            android:label="@string/title_activity_imcresultado"
+            android:theme="@style/Theme.IMC" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
