--- a/IMC/IMC/settings.gradle
+++ b/IMC/IMC/settings.gradle
@@ -12,6 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-
-rootProject.name = "IMC"
-include(":app")
+rootProject.name = "IMCS"
+include ':app'
